[gd_scene load_steps=11 format=3 uid="uid://c26okl4auedr0"]

[ext_resource type="Script" uid="uid://do6drwufnbakp" path="res://Scripts/hibernation_purchase.gd" id="1_mh23q"]
[ext_resource type="Texture2D" uid="uid://dfbxl1c3vtj7i" path="res://Sprites/Currently Used/HibernationGizmo-Sheet.png" id="2_156my"]
[ext_resource type="FontFile" uid="uid://tcbfhi2f14ax" path="res://m5x7.ttf" id="2_xoy1l"]
[ext_resource type="Texture2D" uid="uid://2d5q3hryfya8" path="res://Sprites/Currently Used/Big-Purchase-Button.png" id="4_i4y7w"]
[ext_resource type="Texture2D" uid="uid://88vc0343ovqn" path="res://Sprites/Currently Used/Big-Purchase-Pressed.png" id="5_qyy8w"]
[ext_resource type="Texture2D" uid="uid://ditcbqcwvm4qc" path="res://Sprites/Currently Used/Big-Purchase-Hover.png" id="6_5isid"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xoy1l"]
light_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvpmp"]
bg_color = Color(0.882353, 0.882353, 0.882353, 0.854902)

[sub_resource type="Theme" id="Theme_y027w"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/fonts/font = null
Label/styles/normal = SubResource("StyleBoxFlat_tvpmp")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fde0l"]
light_mode = 1

[node name="Hibernation_purchase" type="Node2D"]
position = Vector2(0, -19)
script = ExtResource("1_mh23q")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_xoy1l")
position = Vector2(0, -109)
scale = Vector2(5, 5)
texture = ExtResource("2_156my")
hframes = 12
frame = 5

[node name="hibernation_count" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_xoy1l")
offset_left = -24.0
offset_top = 118.0
offset_right = 24.0
offset_bottom = 144.0
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_xoy1l")
theme_override_font_sizes/font_size = 32
text = "0/5"
horizontal_alignment = 1

[node name="hibernation_description" type="Label" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_xoy1l")
offset_left = -176.0
offset_top = -197.0
offset_right = 177.0
offset_bottom = -39.0
theme = SubResource("Theme_y027w")
theme_override_fonts/font = ExtResource("2_xoy1l")
theme_override_font_sizes/font_size = 22
text = "Can enter a state of hibernation where no poop is dropped, but when waking up will only drop giant poops for a small amount of time.
(Click to awake early but with a shorter effect)
[Sleep duration: 30s]
[Effect duration: 3s]"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="upgrade_button" type="TextureButton" parent="."]
material = SubResource("CanvasItemMaterial_fde0l")
offset_left = -128.0
offset_top = -29.0
offset_right = -64.0
offset_bottom = 7.0
scale = Vector2(4, 4)
texture_normal = ExtResource("4_i4y7w")
texture_pressed = ExtResource("5_qyy8w")
texture_hover = ExtResource("6_5isid")

[node name="Hibernation_Label" type="Label" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_fde0l")
offset_left = -144.0
offset_top = -12.0
offset_right = 144.0
offset_bottom = 83.0
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_xoy1l")
theme_override_font_sizes/font_size = 36
text = "Hibernation
30000 Poop"
horizontal_alignment = 1

[connection signal="button_down" from="upgrade_button" to="." method="_on_upgrade_button_button_down"]
[connection signal="button_up" from="upgrade_button" to="." method="_on_upgrade_button_button_up"]
[connection signal="mouse_entered" from="upgrade_button" to="." method="_on_upgrade_button_mouse_entered"]
[connection signal="mouse_exited" from="upgrade_button" to="." method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="upgrade_button" to="." method="_on_upgrade_button_pressed"]
